// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chain.coffee 1`] = `
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb.cccccccccccccccccc

aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb.cccccccccccccccccc

aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb[cccccccccccccccccc]

aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb[cccccccccccccccccc]

aaaaaaaaa = bbbbbbbb().ccccccccc(-> d).eeeeeeeeeeeeeeeeeeeeeeee.fffffffffffffffffffffffff

aaaaaaaaa: bbbbbbbb().ccccccccc(-> d).eeeeeeeeeeeeeeeeeeeeeeee.fffffffffffffffffffffffff

aaaaaaaaa = bbbbbbbb().ccccccccc(-> d).eeeeeeeeeeeeeeeeeeeeeeee.fffffffffffffffffffffffff()

aaaaaaaaa: bbbbbbbb().ccccccccc(-> d).eeeeeeeeeeeeeeeeeeeeeeee.fffffffffffffffffffffffff()

aaaaaaaaa = bbbbbbbb.ccccccccc(-> d).eeeeeeeeeeeeeeeeeeeeeeee.fffffffffffffffffffffffff()

aaaaaaaaa: bbbbbbbb.ccccccccc(-> d).eeeeeeeeeeeeeeeeeeeeeeee.fffffffffffffffffffffffff()

a = b.c (d) ->
  e
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa =
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb.cccccccccccccccccc

aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa:
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb.cccccccccccccccccc

aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa =
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb[cccccccccccccccccc]

aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa:
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb[cccccccccccccccccc]

aaaaaaaaa = bbbbbbbb().ccccccccc(-> d).eeeeeeeeeeeeeeeeeeeeeeee
  .fffffffffffffffffffffffff

aaaaaaaaa: bbbbbbbb().ccccccccc(-> d).eeeeeeeeeeeeeeeeeeeeeeee
  .fffffffffffffffffffffffff

aaaaaaaaa = bbbbbbbb()
  .ccccccccc(-> d)
  .eeeeeeeeeeeeeeeeeeeeeeee.fffffffffffffffffffffffff()

aaaaaaaaa: bbbbbbbb()
  .ccccccccc(-> d)
  .eeeeeeeeeeeeeeeeeeeeeeee.fffffffffffffffffffffffff()

aaaaaaaaa = bbbbbbbb
  .ccccccccc(-> d)
  .eeeeeeeeeeeeeeeeeeeeeeee.fffffffffffffffffffffffff()

aaaaaaaaa: bbbbbbbb
  .ccccccccc(-> d)
  .eeeeeeeeeeeeeeeeeeeeeeee.fffffffffffffffffffffffff()

a = b.c (d) ->
  e

`;

exports[`chain.coffee 2`] = `
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb.cccccccccccccccccc

aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb.cccccccccccccccccc

aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb[cccccccccccccccccc]

aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb[cccccccccccccccccc]

aaaaaaaaa = bbbbbbbb().ccccccccc(-> d).eeeeeeeeeeeeeeeeeeeeeeee.fffffffffffffffffffffffff

aaaaaaaaa: bbbbbbbb().ccccccccc(-> d).eeeeeeeeeeeeeeeeeeeeeeee.fffffffffffffffffffffffff

aaaaaaaaa = bbbbbbbb().ccccccccc(-> d).eeeeeeeeeeeeeeeeeeeeeeee.fffffffffffffffffffffffff()

aaaaaaaaa: bbbbbbbb().ccccccccc(-> d).eeeeeeeeeeeeeeeeeeeeeeee.fffffffffffffffffffffffff()

aaaaaaaaa = bbbbbbbb.ccccccccc(-> d).eeeeeeeeeeeeeeeeeeeeeeee.fffffffffffffffffffffffff()

aaaaaaaaa: bbbbbbbb.ccccccccc(-> d).eeeeeeeeeeeeeeeeeeeeeeee.fffffffffffffffffffffffff()

a = b.c (d) ->
  e
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa =
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb.cccccccccccccccccc

aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa:
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb.cccccccccccccccccc

aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa =
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb[cccccccccccccccccc]

aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa:
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb[cccccccccccccccccc]

aaaaaaaaa =
  bbbbbbbb().ccccccccc(-> d).eeeeeeeeeeeeeeeeeeeeeeee.fffffffffffffffffffffffff

aaaaaaaaa:
  bbbbbbbb().ccccccccc(-> d).eeeeeeeeeeeeeeeeeeeeeeee.fffffffffffffffffffffffff

aaaaaaaaa =
  bbbbbbbb()
  .ccccccccc(-> d)
  .eeeeeeeeeeeeeeeeeeeeeeee.fffffffffffffffffffffffff()

aaaaaaaaa:
  bbbbbbbb()
  .ccccccccc(-> d)
  .eeeeeeeeeeeeeeeeeeeeeeee.fffffffffffffffffffffffff()

aaaaaaaaa =
  bbbbbbbb
  .ccccccccc(-> d)
  .eeeeeeeeeeeeeeeeeeeeeeee.fffffffffffffffffffffffff()

aaaaaaaaa:
  bbbbbbbb
  .ccccccccc(-> d)
  .eeeeeeeeeeeeeeeeeeeeeeee.fffffffffffffffffffffffff()

a = b.c (d) ->
  e

`;
